Fix register page logo layout bug

--- a/src/app/apps/register/register-page.component.scss
+++ b/src/app/apps/register/register-page.component.scss
@@ -91,7 +91,6 @@ a:hover {
 }
 
 .paragraph-div {
-  margin-top: -65px;
   font-size: 25px;
   display: flex;
   flex-direction: row;
@@ -153,5 +152,4 @@ h1 {
   button {
     background-color: map-get($bookhive-primary, 800) !important;
   }
-
 }
